force-app/main/default/objects/Vacancy__c/Vacancy__c.object-meta.xml
<CustomObject>
    <label>Vacancy</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vacancy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacancies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>