force-app/main/default/objects/Vacancy__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Candidate__c.Status__c</field>
            <operation>equals</operation>
            <value>Validated by HR</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Vacancies</relationshipLabel>
    <relationshipName>Vacancies</relationshipName>
    <type>Lookup</type>
</CustomField>