force-app/main/default/objects/Vacancy__c/fields/DaysOpen__c.field-meta.xml
<CustomField>
    <fullName>DaysOpen__c</fullName>
    <description>Indicates how many days the vacancy is open</description>
    <formula>TODAY() - Datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DaysOpen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>