force-app/main/default/objects/Vacancy__c/fields/Is_Assigned_To_Me__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_To_Me__c</fullName>
    <formula>$User.Id = Responsible__c &amp;&amp; $UserRole.Name = &#39;Recruiter&#39; &amp;&amp; ISPICKVAL(Status__c, &quot;In-Process&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned To Me?</label>
    <type>Checkbox</type>
</CustomField>