force-app/main/default/objects/Vacancy__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Required technical level</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>d0</fullName>
            </value>
            <value>
                <fullName>d1</fullName>
            </value>
            <value>
                <fullName>d2</fullName>
            </value>
            <value>
                <fullName>d3</fullName>
            </value>
            <value>
                <fullName>d4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>