force-app/main/default/objects/Vacancy__c/fields/Number_Of_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Candidates__c</fullName>
    <label>Number Of Candidates</label>
    <summaryForeignKey>VacancyCandidateAssociation__c.Vacancy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>