force-app/main/default/objects/Vacancy__c/fields/PromoDescription__c.field-meta.xml
<CustomField>
    <fullName>PromoDescription__c</fullName>
    <description>This field contains information about vacancy which will be displayed on public Promo Site</description>
    <label>PromoDescription</label>
    <type>TextArea</type>
</CustomField>