force-app/main/default/objects/Vacancy__c/fields/PublishOnPromoSite__c.field-meta.xml
<CustomField>
    <fullName>PublishOnPromoSite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether to publish this Vacancy on Promo Site</description>
    <label>PublishOnPromoSite</label>
    <type>Checkbox</type>
</CustomField>