force-app/main/default/objects/Vacancy__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Vacancy planned start date</description>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>