force-app/main/default/objects/Vacancy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Vacancy status, &quot;New&quot; and &quot;In-Process&quot; are set by the system. &quot;Cancelled&quot; and &quot;Closed&quot; are available only when the vacancy is already saved and can be edited only by the Manager who opened the vacancy</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In-Process</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>