force-app/main/default/objects/Vacancy__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the vacancy</description>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>