force-app/main/default/objects/Vacancy__c/validationRules/Allowed_only_HIRED_candidates.validationRule-meta.xml
<ValidationRule>
    <fullName>Allowed_only_HIRED_candidates</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK( Candidate__c )) &amp;&amp; Not(ISPICKVAL( Candidate__r.Status__c  ,&quot;Hired&quot;))</errorConditionFormula>
    <errorDisplayField>Candidate__c</errorDisplayField>
    <errorMessage>The Candidate must be Hired first.</errorMessage>
</ValidationRule>