force-app/main/default/objects/Vacancy__c/listViews/Assigned_To_Me.listView-meta.xml
<ListView>
    <fullName>Assigned_To_Me</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Level__c</columns>
    <columns>Comments__c</columns>
    <columns>Description__c</columns>
    <columns>Number_Of_Candidates__c</columns>
    <columns>DaysLeftToClose__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Assigned_To_Me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>In Process</label>
    <sharedTo>
        <role>Recruiter</role>
    </sharedTo>
</ListView>